--- a/contact-us/index.htm
+++ b/contact-us/index.htm
@@ -120,7 +120,7 @@ html body[data-header-resize="1"] .container-wrap, html body[data-header-format=
 
 								<li id="menu-item-441" class="menu-item menu-item-type-custom menu-item-object-custom nectar-regular-menu-item menu-item-has-icon menu-item-441"><a href="#"><span class="nectar-menu-icon svg-icon"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
         <path d="M18.667 32c-5.327 0-10-7.473-10-16 0-8.524 4.673-16 10-16 0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667c-4.099 0-8.667 6.024-8.667 14.667s4.568 14.667 8.667 14.667c0.367 0 0.667 0.3 0.667 0.667s-0.3 0.667-0.667 0.667zM18.667 22.667c-2.832 0-6-2.852-6-6.667s3.168-6.667 6-6.667c0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667c-2.159 0-4.667 2.329-4.667 5.333s2.508 5.333 4.667 5.333c0.367 0 0.667 0.3 0.667 0.667s-0.3 0.667-0.667 0.667zM20.667 32h-2c-0.367 0-0.667-0.3-0.667-0.667v-9.333c0-0.367 0.3-0.667 0.667-0.667h2c1.472 0 2.667 1.197 2.667 2.667v5.333c0 1.472-1.195 2.667-2.667 2.667zM19.333 30.667h1.333c0.735 0 1.333-0.597 1.333-1.333v-5.333c0-0.736-0.599-1.333-1.333-1.333h-1.333v8zM20.667 10.667h-2c-0.367 0-0.667-0.299-0.667-0.667v-9.333c0-0.368 0.3-0.667 0.667-0.667h2c1.472 0 2.667 1.197 2.667 2.667v5.333c0 1.471-1.195 2.667-2.667 2.667zM19.333 9.333h1.333c0.735 0 1.333-0.597 1.333-1.333v-5.333c0-0.736-0.599-1.333-1.333-1.333h-1.333v8z"></path>
-        </svg></span><span class="menu-title-text">1.808.234.4567</span></a></li>
+        </svg></span><span class="menu-title-text"></span></a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom nectar-regular-menu-item menu-item-btn-style-button-animated_extra-color-gradient menu-item-hover-text-reveal-wave menu-item-has-icon menu-item-440"><a href="#"><span class="nectar-menu-icon svg-icon"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
         <path d="M27.333 32h-19.333c-2.205 0-4-1.795-4-4v-24c0-2.252 2.508-4 4.667-4h18c0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667h-18c-1.5 0-3.333 1.231-3.333 2.667v1.333c0 1.436 1.833 2.667 3.333 2.667h18.667c0.367 0 0.667 0.299 0.667 0.667v22.667c0 0.367-0.3 0.667-0.667 0.667zM5.333 8.017v19.983c0 1.472 1.196 2.667 2.667 2.667h18.667v-21.333h-18c-1.157 0-2.416-0.503-3.333-1.316zM25.333 5.333h-17.333c-0.368 0-0.667-0.299-0.667-0.667s0.299-0.667 0.667-0.667h17.333c0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667z"></path>
         </svg></span><span class="menu-title-text"><span class="char">B</span><span class="char">o</span><span class="char">o</span><span class="char">k</span> <span class="char">N</span><span class="char">o</span><span class="char">w</span></span></a></li>
@@ -177,9 +177,9 @@ html body[data-header-resize="1"] .container-wrap, html body[data-header-format=
 		<h3>Contact.</h3>
 <p>We’re currently in look of a few new designers – If you’re a passionate worker and think you have what it takes, send your resume and details to for all opportunities.</p>
 <p>&nbsp;</p>
-<h5>Apni Pathshala</h5>
-<p><strong>Dharmveer Jakhar </strong></p>
-<p><a href="..\index.htm">hello@moxrathore.com</a></p>
+<h5>Address</h5>
+<p><strong>Pratik Bafna </strong></p>
+<p><a href="..\index.htm">Contact@pratikbafna.com</a></p>
 <h5></h5>
 <h5>india</h5>
 	</div>
@@ -379,7 +379,7 @@ html body[data-header-resize="1"] .container-wrap, html body[data-header-format=
 						<ul class="menu">
 							<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-icon menu-item-441"><a href="#"><span class="nectar-menu-icon svg-icon"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
         <path d="M18.667 32c-5.327 0-10-7.473-10-16 0-8.524 4.673-16 10-16 0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667c-4.099 0-8.667 6.024-8.667 14.667s4.568 14.667 8.667 14.667c0.367 0 0.667 0.3 0.667 0.667s-0.3 0.667-0.667 0.667zM18.667 22.667c-2.832 0-6-2.852-6-6.667s3.168-6.667 6-6.667c0.367 0 0.667 0.299 0.667 0.667s-0.3 0.667-0.667 0.667c-2.159 0-4.667 2.329-4.667 5.333s2.508 5.333 4.667 5.333c0.367 0 0.667 0.3 0.667 0.667s-0.3 0.667-0.667 0.667zM20.667 32h-2c-0.367 0-0.667-0.3-0.667-0.667v-9.333c0-0.367 0.3-0.667 0.667-0.667h2c1.472 0 2.667 1.197 2.667 2.667v5.333c0 1.472-1.195 2.667-2.667 2.667zM19.333 30.667h1.333c0.735 0 1.333-0.597 1.333-1.333v-5.333c0-0.736-0.599-1.333-1.333-1.333h-1.333v8zM20.667 10.667h-2c-0.367 0-0.667-0.299-0.667-0.667v-9.333c0-0.368 0.3-0.667 0.667-0.667h2c1.472 0 2.667 1.197 2.667 2.667v5.333c0 1.471-1.195 2.667-2.667 2.667zM19.333 9.333h1.333c0.735 0 1.333-0.597 1.333-1.333v-5.333c0-0.736-0.599-1.333-1.333-1.333h-1.333v8z"></path>
-        </svg></span><span class="menu-title-text">1.808.234.4567</span></a></li>
+        </svg></span><span class="menu-title-text"></span></a></li>
 
 						</ul>
 
