--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en-US" class="no-js">
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QPTVXY38RL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QPTVXY38RL');
+</script>
+<meta name="google-site-verification" content="rQ8y6vLJR6GHLCYhLrWW70an9WvOytyLwMvy7YMG9eE" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"><title>Pratik Bafna &#8211; Official Website</title>
 <meta name='robots' content='max-image-preview:large'>
